<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/red">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="10dp"
        android:drawableLeft="@drawable/email"
        android:hint="@string/username"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/lock"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:textColor="#fdfdfd"
        android:textSize="15dp"
        android:gravity="center"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/blue"
            android:text="@string/not_registered"/>
        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="@string/register"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/blue"
            android:text="@string/forgot"/>
        <TextView
            android:id="@+id/textview_reset"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:text="@string/reset"/>
    </LinearLayout>
</LinearLayout>
