<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".notes"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Transaction"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#B74C3E">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/elements"
            app:civ_border_color="#254651"
            app:civ_border_width="10dp"
            android:paddingRight="10dp"
            android:contentDescription="TODO"/>

        <TextView
        android:id="@+id/tran_title"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="TRANSACTION"
        android:fontFamily="sans-serif-condensed-medium"

        android:textSize="30sp"
        android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/stock_name"
            android:textSize="17sp"
            android:layout_marginLeft="5dp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edittext_stock_name"
            android:layout_width="279dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="Apple" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/stock_symbol"
            android:textSize="16sp"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edittext_stock_symbol"
            android:layout_width="276dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="AAPL" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="start"
            android:text="@string/price"
            android:layout_marginLeft="5dp"
            android:paddingRight="89dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_price"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/dollar"
            android:paddingLeft="5dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="172.30" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:paddingRight="37dp"
            android:layout_marginLeft="5dp"
            android:gravity="start"
            android:text="@string/number_of_shares"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edittext_shares"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="10" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/or"
        android:id="@+id/textView_or"
        android:textColor="#FF0000"
        android:paddingLeft="40dp"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/total_money"
            android:paddingRight="69dp"
            android:paddingLeft="5dp"
            android:textSize="17sp"
            android:gravity="start"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edittext_total_money"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="1dp"
            android:drawableLeft="@drawable/dollar"
            android:paddingLeft="5dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="1000" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/alert"
        android:id="@+id/alert_for_purchase"
        android:paddingLeft="5dp"
        android:layout_gravity="center"
        android:textColor="#FF0000"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/purchased_price"
            android:paddingRight="57dp"
            android:paddingLeft="5dp"
            android:textSize="17sp"
            android:gravity="start"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edittext_purchasedPrice_each_stock"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="1dp"
            android:drawableLeft="@drawable/dollar"
            android:paddingLeft="5dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:hint="1000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingRight="40dp"
            android:paddingLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/Transaction_type"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/RGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/button_bought"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/bought"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/button_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:text="@string/sold"
                    android:textSize="17sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="2000dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:paddingLeft="45dp"
                android:text="@string/date"
                android:drawableLeft="@drawable/date"
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_date"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_edittext"
                android:gravity="center"
                android:hint = "MM-DD-YYYY"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_t_submit"
        android:layout_width="220dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/record_button"
        android:textColor="#fdfdfd"
        android:textSize="15dp"
        android:gravity="center"
        android:text="@string/record"/>

</LinearLayout>
</ScrollView>