<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newPassword">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#B74C3E"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reset_page"
            android:layout_width="400dp"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <EditText android:id="@+id/edittext_password"
            android:gravity="center"
            android:drawableLeft="@drawable/lock"
            android:background="@drawable/rounded_edittext"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:layout_width="279dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edittext_confpassword"
            android:gravity="center"
            android:drawableLeft="@drawable/lock"
            android:background="@drawable/rounded_edittext"
            android:paddingLeft="10dp"
            android:layout_width="279dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_update"
            android:layout_width="300dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/record_button"
            android:textColor="#fdfdfd"
            android:textSize="15dp"
            android:gravity="center"
            android:text="@string/verify"/>

    </LinearLayout>

</RelativeLayout>